--- a/style.css
+++ b/style.css
@@ -97,3 +97,54 @@ html {
   
     
   }
+  .area-login {
+    display: flex;
+    height: 100vh;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+  }
+  .login{
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-items: center;
+  }
+  .login form{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+  .login form p {
+    text-align: right;
+    padding-bottom: 10px;
+  }
+  .login input{
+    margin-bottom: 10px;
+    margin-top: 10px;
+    padding-left: 5px;
+    height: 35px;
+    outline: none;
+    border-radius: 8px;
+  }
+  .img-login{
+    display: flex;
+  }
+  .img-login h2 {
+    text-align: center;
+  }
+  .img-login img {
+    width: 150px;
+  }
+  form [type="submit"] {
+    display: block;
+    padding: 8px;
+    background-color: #FF6353;
+    border: none;
+    border-radius: 8px;
+    color: white;
+    font-size: 15px;
+    text-transform: uppercase;
+    font-weight: bold;
+  }
