--- a/style.css
+++ b/style.css
@@ -106,10 +106,14 @@ html {
   }
   .login{
     width: 30%;
+    padding: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-items: center;
+    background-color: #FF6353;
+    border: 5px black;
+    border-style: solid;
   }
   .login form{
     display: flex;
@@ -137,11 +141,67 @@ html {
   .img-login img {
     width: 150px;
   }
-  form [type="submit"] {
+    .botao-login{
     display: block;
     padding: 8px;
     background-color: #FF6353;
-    border: none;
+    border: solid 1px black;
+    border-radius: 8px;
+    color: white;
+    font-size: 15px;
+    text-transform: uppercase;
+    font-weight: bold;
+  }
+  .area-cadastro {
+    display: flex;
+    height: 100vh;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+  }
+  .cadastro{
+    width: 30%;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-items: center;
+    background-color: #FF6353;
+    border: 5px black;
+    border-style: solid;
+  }
+  .cadastro form{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+  .cadastro form p {
+    text-align: right;
+    padding-bottom: 10px;
+  }
+  .cadastro input{
+    margin-bottom: 10px;
+    margin-top: 10px;
+    padding-left: 5px;
+    height: 35px;
+    outline: none;
+    border-radius: 8px;
+  }
+  .img-cadastro{
+    display: flex;
+  }
+  .img-cadastro h2 {
+    text-align: center;
+  }
+  .img-cadastro img {
+    width: 150px;
+  }
+  .botao-cadastro {
+    display: block;
+    margin-top: 10px;
+    padding: 8px;
+    background-color: #FF6353;
+    border: solid 1px black;
     border-radius: 8px;
     color: white;
     font-size: 15px;
